welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value T
	var n:Int = T.length
                    ^indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to n) {
               ^